--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "mongoose": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "uuid": "^9.0.0",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
   }
